[package]
name = "bpf-program-template"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[dependencies]
solana-program = "=1.7.12"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.18.26"
solana-sdk = "=1.7.12"
solana-validator = "=1.7.12"

[lib]
crate-type = ["cdylib", "lib"]
